# wasteday

./: .gitignore  README.md  RELEASE.md  memo  package-lock.json  package.json  tsconfig.json  wasteday  wasteday.pub
.github/workflows/: ci.yml  pr-guard.yml  release.yml
apps/chrome-extension/: CHROME_STORE_INFO.md  INSTALL.md  PUBLISH_GUIDE.md  README.md  SCREENSHOTS_GUIDE.md  background.js  content.js  manifest.json  package.json  popup.html  popup.js
apps/desktop/: PERFORMANCE_OPTIMIZATION.md  README.md  UNIFIED_DASHBOARD.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: BrowsingStats.tsx  DashboardStats.tsx  DataSourceToggle.tsx  DatabaseStatus.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  Layout.tsx  LoadingSpinner.tsx  SamplingStatus.tsx  SimpleDataSourceToggle.tsx  TopItemsList.tsx  UpdateNotification.tsx
apps/desktop/src/context/: IngestContext.tsx
apps/desktop/src/hooks/: index.ts  useAppCategories.ts  useBrowsingData.ts  useCategoryEventEmitter.ts  useDatabaseStatus.ts  useExtensionData.ts  (+10 more)
apps/web/: .sample.dev.vars  package.json  worker-configuration.d.ts  wrangler.jsonc
apps/web/app/: root.tsx  routes.ts
apps/web/workers/: app.ts
docs/: ROADMAP.md  要件定義.md
scripts/: generate-updater-key.ps1  generate-updater-key.sh  test_ingest_server.py
(+51 files in other folders)
