[package]
name = "wasteday"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wasteday_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
time = { version = "0.3", features = ["parsing", "formatting"] }
windows = { version = "0.54", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_Foundation"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

